# fast-api-workshop

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements_local.txt
.github/workflows/: ci.yml  cicd.yml  codeql-analysis.yml
app/: main.py  models.py
tests/: test_main.py
