[tool.poetry]
name = "fast-api-workshop"
version = "0.1.0"
description = "Fastapi Demo for workshop"
authors = ["Alex Pineda <ale.hpineda@gmail.com>"]
license = "GPL V3"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
flake8 = "^3.9.2"
flake8-html = "^0.4.1"
black = "^21.5b1"
pytest = "^6.2.4"
pytest-cov = "^2.12.0"
pytest-html = "^3.1.1"
pytest-sugar = "^0.9.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
